-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0 Beta 1
-
None
-
-
c0538857358e57c1551f7d10c07a9bb80d848cd7 (qt/qtbase/5.12)
If Qml is run inside QQuickWidget, MouseAreas do not register the first click after a double click.
Use attached example application to reproduce, simple doubleclick on the text and then click -> the final click is not registered.
This regression causes annoyances in Qt 3D Studio, where some UI elements are run inside QQuickWidgets.
Works on other platforms or when using qmlscene for the QML file.
Not noticeable in widget applications since they don't maintain a state by release.
- is duplicated by
-
QTBUG-71469 TapHandler doubleTapped incorrectly emitted from the mouse or touchpad
-
- Closed
-
-
QTBUG-72219 QToolButton incorrectly appears as "pressed" when double clicked
-
- Closed
-
- resulted in
-
QTBUG-71263 Qt QPA/mouse handling: QPA should support native double click events
-
- Open
-
For Gerrit Dashboard: QTBUG-70999 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
242978,5 | Windows/QPA: Fix receiving mouse clicks after double clicks in QQuickWidget | 5.12 | qt/qtbase | Status: MERGED | -2 | 0 |
243174,4 | QtGui: Check event type in QWindowSystemInterface::handleMouseEvent() | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |