src/Authoring/Studio/Palettes/Project/ProjectView.qml
@@ -77,12 +77,15 @@ Rectangle {
                     height: 20
                     color: (index == projectTree.currentIndex || dragging) ? _selectionColor
                                                                            : "transparent"
-                    function handlePress(mouse) {
-                        if (_isDraggable) {
+                    function handlePress(mouse, tryDrag) {
+                        projectTree.currentIndex = model.index;
+
+                        if (mouse.button === Qt.LeftButton && tryDrag && _isDraggable) {
                             pressPoint = Qt.point(mouse.x, mouse.y);
                             dragStarted = false;
                         }
                     }
+
                     function handlePositionChange(mouse, item) {
                         if (_isDraggable && !dragStarted
                                 && (Math.abs(mouse.x - pressPoint.x) > 4
@@ -92,75 +95,115 @@ Rectangle {
                         }
                     }
 
-                    Row {
-                        x: _depth*28
-                        anchors.verticalCenter: delegateItem.verticalCenter
+                    function handleClick(mouse) {
+                        if (mouse.button === Qt.RightButton) {
+                            var rootPoint = mapToItem(root, mouse.x, mouse.y);
+                            _parentView.showContextMenu(rootPoint.x, rootPoint.y,
+                                                        projectTree.currentIndex);
+                        }
+                    }
 
-                        Image {
-                            source: _resDir + (_expanded ? "arrow_down.png" : "arrow.png")
-                            opacity: _isExpandable ? 1 : 0
+                    function handleDoubleClick(mouse) {
+                        if (mouse.button === Qt.LeftButton) {
+                            if (_isExpandable) {
+                                if (_expanded)
+                                    projectTree.model.collapse(index);
+                                else
+                                    projectTree.model.expand(index);
+                            } else {
+                                _parentView.openFile(index);
+                            }
+                        }
+                    }
 
-                            MouseArea {
-                                visible: _isExpandable
-                                anchors.fill: parent
-                                onClicked: {
-                                    if (_expanded)
-                                       projectTree.model.collapse(index)
-                                    else
-                                        projectTree.model.expand(index)
-                                    delegateMouseArea.clickPending = false
+                    MouseArea {
+                        id: delegateMouseArea
+                        anchors.fill: parent
+                        acceptedButtons: Qt.RightButton | Qt.LeftButton
+
+                        onPressed: delegateItem.handlePress(mouse, false)
+                        onClicked: delegateItem.handleClick(mouse)
+                        onDoubleClicked: delegateItem.handleDoubleClick(mouse)
+
+                        Row {
+                            x: _depth*28
+                            anchors.verticalCenter: parent.verticalCenter
+
+                            Image {
+                                source: _resDir + (_expanded ? "arrow_down.png" : "arrow.png")
+                                opacity: _isExpandable ? 1 : 0
+
+                                MouseArea {
+                                    visible: _isExpandable
+                                    anchors.fill: parent
+                                    acceptedButtons: Qt.LeftButton
+                                    onPressed: delegateItem.handlePress(mouse, false)
+                                    onClicked: {
+                                        if (_expanded)
+                                            projectTree.model.collapse(index)
+                                        else
+                                            projectTree.model.expand(index)
+                                    }
                                 }
                             }
-                        }
 
-                        Image {
-                            id: fileIconImage
-                            source: fileIcon
-                            MouseArea {
-                                anchors.fill: parent
-                                onPressed: delegateItem.handlePress(mouse)
-                                onPositionChanged: delegateItem.handlePositionChange(mouse,
-                                                                                     fileIconImage)
+                            Image {
+                                id: fileIconImage
+                                source: fileIcon
+                                MouseArea {
+                                    anchors.fill: parent
+                                    acceptedButtons: Qt.RightButton | Qt.LeftButton
+                                    onPressed: delegateItem.handlePress(mouse, true)
+                                    onPositionChanged: delegateItem.handlePositionChange(
+                                                           mouse, fileIconImage)
+                                    onClicked: delegateItem.handleClick(mouse)
+                                    onDoubleClicked: delegateItem.handleDoubleClick(mouse)
+                                }
                             }
-                        }
 
-                        StyledLabel {
-                            id: fileNameLabel
-                            text: _fileId ? fileName + " <" + _fileId + ">" : fileName;
-                            color: _isReferenced ? _textColor : _disabledColor
-                            leftPadding: 2
+                            StyledLabel {
+                                id: fileNameLabel
+                                text: _fileId ? fileName + " <" + _fileId + ">" : fileName;
+                                color: _isReferenced ? _textColor : _disabledColor
+                                leftPadding: 2
 
-                            MouseArea {
-                                anchors.fill: parent
-                                onPressed: delegateItem.handlePress(mouse)
-                                onPositionChanged: delegateItem.handlePositionChange(mouse,
-                                                                                     fileNameLabel)
+                                MouseArea {
+                                    anchors.fill: parent
+                                    acceptedButtons: Qt.RightButton | Qt.LeftButton
+                                    onPressed: delegateItem.handlePress(mouse, true)
+                                    onPositionChanged: delegateItem.handlePositionChange(
+                                                           mouse, fileNameLabel)
+                                    onClicked: delegateItem.handleClick(mouse)
+                                    onDoubleClicked: delegateItem.handleDoubleClick(mouse)
+                                }
                             }
-                        }
 
-                        Item {
-                            // Spacer item
-                            width: 4
-                            height: 1
-                        }
-
-                        Image {
-                            source: _extraIcon ? _resDir + _extraIcon : ""
-                            visible: _extraIcon ? true : false
-
-                            MouseArea {
-                                id: warningMouseArea
-                                anchors.fill: parent
-                                hoverEnabled: true
-
-                                onClicked: delegateMouseArea.clickPending = false
-                                onDoubleClicked: _parentView.editPresentationId(index)
+                            Item {
+                                // Spacer item
+                                width: 4
+                                height: 1
                             }
-                            StyledTooltip {
-                                text: _parentView.isPresentation(index)
-                                      ? qsTr("No presentation Id")
-                                      : qsTr("No Qml stream Id")
-                                enabled: warningMouseArea.containsMouse
+
+                            Image {
+                                source: _extraIcon ? _resDir + _extraIcon : ""
+                                visible: _extraIcon ? true : false
+
+                                MouseArea {
+                                    id: warningMouseArea
+                                    anchors.fill: parent
+                                    acceptedButtons: Qt.RightButton | Qt.LeftButton
+                                    hoverEnabled: true
+                                    onPressed: delegateItem.handlePress(mouse, false)
+                                    onClicked: delegateItem.handleClick(mouse)
+                                    onDoubleClicked: _parentView.editPresentationId(
+                                                         index, _parentView.isQmlStream(index))
+                                }
+                                StyledTooltip {
+                                    text: _parentView.isPresentation(index)
+                                          ? qsTr("No presentation Id")
+                                          : qsTr("No Qml stream Id")
+                                    enabled: warningMouseArea.containsMouse
+                                }
                             }
                         }
                     }
@@ -186,47 +229,6 @@ Rectangle {
                             if (drop.hasUrls)
                                 projectTree.model.importUrls(drop.urls, index, false);
                             dragging = false;
-                        }
-                    }
-
-                    MouseArea {
-                        id: delegateMouseArea
-                        property bool clickPending: false
-                        anchors.fill: parent
-                        acceptedButtons: Qt.RightButton|Qt.LeftButton
-                        propagateComposedEvents: true
-                        onPressed: {
-                            projectTree.currentIndex = model.index;
-
-                            // Presses must be ignored by this handler in order for dragging to work
-                            mouse.accepted = false;
-
-                            if (mouse.button === Qt.LeftButton) {
-                                // Since ignoring presses means we don't get doubleClicked events,
-                                // detect doubleclick using custom timer.
-                                if (clickPending) {
-                                    if (_isExpandable) {
-                                        if (_expanded)
-                                            projectTree.model.collapse(index);
-                                        else
-                                            projectTree.model.expand(index);
-                                    } else {
-                                        _parentView.openFile(index);
-                                    }
-
-                                    clickPending = false;
-                                } else {
-                                    clickPending = true;
-                                    doubleClickTimer.restart();
-                                }
-                            }
-                        }
-                        Timer {
-                            id: doubleClickTimer
-                            repeat: false
-                            triggeredOnStart: false
-                            interval: 500
-                            onTriggered: parent.clickPending = false;
                         }
                     }
                 }
